# code-delegation-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MEETING_OF_MODELS_TRANSCRIPT.md  NEXT_STEPS.md  PROGRESS.json  README.md  RELEASE_CHECKLIST.md  SECURITY.md  install.sh  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
docs/: DOCUMENTATION-STRUCTURE.md  comparison.md  dogfooding-case-study.md  faq.md  installation.md  quickstart.md  roadmap.md  troubleshooting.md  usage-notes.md
docs/advanced/: architecture.md
docs/development/: contributing.md  development-setup.md  release-process.md
docs/examples/: example-usage.md  index.md  safe_test_target.py
docs/operations/: runbook-resilience.md
docs/usage/: basic-usage.md  cli-reference.md  for-agents-and-sidecars.md  output-artifacts.md
references/: proxmox-control-create-lxc-notes.md
references/dogfood-prompts/: README.md  proxmox-control-appliance-provisioning-v1.md  proxmox-control-provisioning-v1.md  tag-nuc-casing-apply.md  tag-nuc-casing-micro.md  tag-v2-scanner-seed-v4.md  tag-v2-scanner-seed-v5.md
scripts/: gcdh-tmux  grok_delegate.py  monitor_cdh_status.py  publish.sh
src/code_delegation_harness/: __init__.py  cli.py  harness.py  intake.py  smoke.py  status.py  trace.py
src/code_delegation_harness/prompts/: normalization_v1.0.txt
src/code_delegation_harness/stanzas/: __init__.py  base_v1.0.txt
src/grok_delegate/: __init__.py  cli.py  harness.py
tests/: test_confirmation.py  test_intake.py  test_normalize_result.py  test_public_hygiene.py  test_research_prune.py  test_resilience.py  test_smoke.py  test_stanzas.py  test_status_features.py  test_trace.py
