[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-delegation-harness"
version = "0.2.0"
description = "A universal, production-grade harness for delegating coding work to LLMs. Excellent structured output, long-running support, and review artifacts. First-class experience with Grok."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Code Delegation Harness Project"}
]
keywords = ["ai", "llm", "coding", "delegation", "automation", "grok", "agent", "sidecar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
# After `pip install -e .` (or `pip install .`), users get the professional command:
#   gcdh --help
gcdh = "grok_delegate.cli:main"

[project.urls]
Homepage = "https://github.com/joshuafielden43/code-delegation-harness"
Repository = "https://github.com/joshuafielden43/code-delegation-harness"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
