[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-delegation-harness"
version = "0.2.1"
description = "A harness for delegating coding work to LLMs while keeping your main agent clean. Structured artifacts, long-running support, and swappable backends."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Joshua Fielden", email = "joshua@fielden.dev"}
]
keywords = ["ai", "llm", "coding", "delegation", "automation", "grok", "agent", "sidecar", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
# After `pip install -e .` (or `pip install .`), users get the professional command:
#   gcdh --help
gcdh = "code_delegation_harness.harness:main"

[project.urls]
Homepage = "https://github.com/joshuafielden43/code-delegation-harness"
Repository = "https://github.com/joshuafielden43/code-delegation-harness"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
