[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-delegation-harness"
version = "0.4.0"
description = "A model-agnostic harness for delegating coding work to any coding CLI. Intake normalization, manifest extraction, hygiene stanza injection, attack loop, and canonical build attempt traces."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Joshua Fielden", email = "joshua@fielden.dev"}
]
keywords = ["ai", "llm", "coding", "delegation", "automation", "grok", "agent", "sidecar", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
# Intake gate extras: Anthropic SDK for structured orchestrator calls via native tool_use.
# Install with: pip install "code-delegation-harness[intake]"
# Without these, the intake gate falls back to the CLI backend (no extra deps required).
intake = [
    "anthropic>=0.109.1",
]

[project.scripts]
# After `pip install -e .` (or `pip install .`), users get the professional command:
#   gcdh --help
gcdh = "code_delegation_harness.harness:main"

[project.urls]
Homepage = "https://github.com/joshuafielden43/code-delegation-harness"
Repository = "https://github.com/joshuafielden43/code-delegation-harness"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
